Added search in show users

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,7 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownAdministrationLink">
                                 <li><a class="dropdown-item" href="{% url 'register user' %}">Create User</a></li>
                                 <li><a class="dropdown-item" href="{% url 'show users' %}">Edit/Delete User</a></li>
+                                <li><a class="dropdown-item" href="{% url 'search and show users' %}">Search/Edit/Delete User</a></li>
                                 <li><a class="dropdown-item" href="{% url 'doctor select' %}">View Doctor Day
                                     Schedule</a></li>
                                 <li><a class="dropdown-item" href="{% url 'create doctor' %}">Create Doctor</a></li>
