--- a/templates/user_show.html
+++ b/templates/user_show.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
+{#{% extends 'user_search_show.html' %}#}
 {% block pagecontent %}
+{#{% block list_content %}#}
 
 
     <table class="table">
